--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router":  "2.0.0-rc.1",
     "@angular/router-deprecated":  "2.0.0-rc.1",
     "@angular/upgrade":  "2.0.0-rc.1",
+    "angular2-jwt": "^0.1.9",
 
     "systemjs": "0.19.27",
     "es6-shim": "^0.35.0",
