added missing dependencies

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "zone.js": "^0.6.12",
     "angular2-in-memory-web-api": "0.0.14",
     "bootstrap": "^3.3.6",
-    "angular2-jwt": "^0.1.16"
+    "angular2-jwt": "^0.1.16",
+    "httpdispatcher":"1.0.0",
+    "mongodb":"2.2.1"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
