--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
+    "phantomjs-prebuilt": "^2.1.14",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
+    "karma-spec-reporter": "0.0.26",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
