--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ branches:
 before_script:
   - npm install phantomjs
   - npm install -g karma
+  - npm install coveralls
   - npm install
   - ng build
 
 script:
   - ng test --no-watch
+
+after_success:
+  - npm run coveralls
