--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
 before_script:
   - npm install phantomjs
   - npm install -g karma
-  - npm install coveralls
+  - npm install -g coveralls
   - npm install
   - ng build
 
