--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "ng": "ng",
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
+    "test": "ng test -cc",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "coveralls": "cat ./coverage/coverage.lcov | coveralls"
   },
   "private": true,
   "dependencies": {
