updated packages (breaking)

--- a/package.json
+++ b/package.json
@@ -14,33 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
-    "auth0-lock": "10.11.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2",
-    "mongodb": "2.2.19",
-    "bootstrap": "3.3.7",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "angular2-in-memory-web-api": "0.0.21",
-    "angular2-jwt": "0.1.27",
+    "angular2-jwt": "0.1.28",
+    "auth0-lock": "10.11.0",
+    "bootstrap": "3.3.7",
+    "core-js": "^2.4.1",
     "httpdispatcher": "2.0.1",
-    "systemjs": "0.19.41",
+    "mongodb": "2.2.19",
+    "primeng": "2.0.3",
     "reflect-metadata": "0.1.9",
-    "primeng": "2.0.3"
+    "rxjs": "5.2.0",
+    "systemjs": "0.19.41",
+    "ts-helpers": "^1.1.1",
+    "typescript": "^2.2.1",
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
     "phantomjs-prebuilt": "^2.1.14",
     "jasmine-core": "2.5.2",
@@ -56,6 +60,12 @@
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
-    "typescript": "~2.0.3"
+    "typescript": "2.2.1"
+  },
+  "peerDependencies": {
+    "@angular/core": "2.0.0 || 4.0.0" ,
+    "@angular/http": "2.0.0 || 4.0.0",
+    "zone.js": "0.7.2 || 0.8.5",
+    "rxjs": "5.0.1 || 5.2.0"
   }
 }
