--- a/package.json
+++ b/package.json
@@ -14,58 +14,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "angular2-in-memory-web-api": "0.0.21",
-    "angular2-jwt": "0.1.28",
-    "auth0-lock": "10.11.0",
-    "bootstrap": "3.3.7",
-    "core-js": "^2.4.1",
-    "httpdispatcher": "2.0.1",
-    "mongodb": "2.2.19",
-    "primeng": "2.0.3",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.2.0",
-    "systemjs": "0.19.41",
-    "ts-helpers": "^1.1.1",
-    "typescript": "^2.2.1",
-    "zone.js": "0.8.5"
+    "@angular/animations": "^4.4.4",
+    "@angular/common": "^4.4.4",
+    "@angular/compiler": "^4.4.4",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/forms": "^4.4.4",
+    "@angular/http": "^4.4.4",
+    "@angular/platform-browser": "^4.4.4",
+    "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/platform-server": "^4.4.4",
+    "@angular/router": "^4.4.4",
+    "angular-in-memory-web-api": "^0.4.6",
+    "angular2-jwt": "^0.2.3",
+    "auth0-lock": "^10.22.0",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.5.1",
+    "httpdispatcher": "^2.1.0",
+    "mongodb": "^2.2.31",
+    "primeng": "^4.2.1",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.4.3",
+    "systemjs": "^0.20.19",
+    "ts-helpers": "^1.1.2",
+    "typescript": "^2.5.3",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
-    "phantomjs-prebuilt": "^2.1.14",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma-spec-reporter": "0.0.26",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "@angular/cli": "1.4.4",
+    "@angular/compiler-cli": "4.4.4",
+    "@types/jasmine": "2.6.0",
+    "@types/node": "^8.0.31",
+    "codelyzer": "~3.2.0",
+    "phantomjs-prebuilt": "^2.1.15",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma-spec-reporter": "0.0.31",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
-    "typescript": "2.2.1"
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "~5.1.2",
+    "ts-node": "3.3.0",
+    "tslint": "^5.7.0",
+    "typescript": "2.5.3"
   },
   "peerDependencies": {
-    "@angular/core": "2.0.0 || 4.0.0" ,
-    "@angular/http": "2.0.0 || 4.0.0",
-    "zone.js": "0.7.2 || 0.8.5",
-    "rxjs": "5.0.1 || 5.2.0"
+    "@angular/core": "4.4.4",
+    "@angular/http": "4.4.4",
+    "zone.js": "0.8.18",
+    "rxjs": "5.4.3"
   }
 }
