configured polyfill for karma

--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "angular-in-memory-web-api": "^0.4.6",
     "angular2-jwt": "^0.2.3",
     "auth0-lock": "^10.22.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.1",
     "httpdispatcher": "^2.1.0",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.31",
     "primeng": "^4.2.1",
     "reflect-metadata": "^0.1.10",
+    "resolve-url-loader": "^2.1.0",
     "rxjs": "^5.4.3",
     "systemjs": "^0.20.19",
     "ts-helpers": "^1.1.2",
@@ -44,19 +48,20 @@
     "@angular/cli": "1.4.4",
     "@angular/compiler-cli": "4.4.4",
     "@types/jasmine": "2.6.0",
+    "@types/jquery": "^3.2.12",
     "@types/node": "^8.0.31",
     "codelyzer": "~3.2.0",
-    "phantomjs-prebuilt": "^2.1.15",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma-spec-reporter": "0.0.31",
     "karma": "1.7.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.0.1",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-cli": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-istanbul": "^0.6.0",
+    "karma-spec-reporter": "0.0.31",
+    "phantomjs-prebuilt": "^2.1.15",
     "protractor": "~5.1.2",
     "ts-node": "3.3.0",
     "tslint": "^5.7.0",
