--- a/package.json
+++ b/package.json
@@ -54,12 +54,10 @@
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-remap-istanbul": "^0.6.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-spec-reporter": "0.0.31",
     "phantomjs-prebuilt": "^2.1.15",
     "protractor": "~5.2.0",
