major overhaul (in progress)

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "angular2-jwt": "^0.2.3",
     "auth0-lock": "^10.23.1",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.1",
+    "express": "^4.16.2",
     "httpdispatcher": "^2.1.0",
     "jquery": "^3.2.1",
     "mongodb": "^2.2.33",
