endpoints are now secured

--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.1",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "httpdispatcher": "^2.1.0",
     "jquery": "^3.2.1",
+    "jwks-rsa": "^1.2.1",
     "mongodb": "^2.2.33",
     "primeng": "^4.2.2",
     "reflect-metadata": "^0.1.10",
