--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "express-jwt": "^5.3.0",
     "httpdispatcher": "^2.1.0",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.0",
     "jwks-rsa": "^1.2.1",
+    "moment": "^2.19.3",
     "mongodb": "^2.2.33",
     "primeng": "^4.2.2",
     "reflect-metadata": "^0.1.10",
