--- a/package.json
+++ b/package.json
@@ -14,67 +14,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/platform-server": "^4.4.6",
-    "@angular/router": "^4.4.6",
-    "angular-in-memory-web-api": "^0.5.0",
+    "@angular/animations": "^5.1.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/platform-server": "^5.1.0",
+    "@angular/router": "^5.1.0",
+    "angular-in-memory-web-api": "^0.5.2",
     "angular2-jwt": "^0.2.3",
-    "auth0-lock": "^10.23.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.2",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
-    "httpdispatcher": "^2.1.0",
+    "httpdispatcher": "^2.1.1",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "jwks-rsa": "^1.2.1",
     "moment": "^2.19.3",
     "mongodb": "^2.2.33",
-    "primeng": "^4.2.2",
+    "primeng": "^5.0.2",
     "reflect-metadata": "^0.1.10",
-    "resolve-url-loader": "^2.1.1",
-    "rxjs": "^5.5.0",
+    "resolve-url-loader": "^2.2.0",
+    "rxjs": "^5.5.5",
     "systemjs": "^0.20.19",
     "ts-helpers": "^1.1.2",
-    "typescript": "^2.5.3",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.8",
-    "@angular/compiler-cli": "4.4.6",
-    "@types/jasmine": "2.6.0",
-    "@types/jquery": "^3.2.15",
-    "@types/node": "^8.0.46",
-    "codelyzer": "~3.2.1",
-    "jasmine-core": "2.8.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "1.7.1",
+    "@angular/cli": "^1.6.0",
+    "@angular/compiler-cli": "^5.1.0",
+    "@types/jasmine": "^2.8.2",
+    "@types/jquery": "^3.2.16",
+    "@types/node": "^8.0.57",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.7.1",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-spec-reporter": "0.0.31",
-    "phantomjs-prebuilt": "^2.1.15",
-    "protractor": "~5.2.0",
-    "ts-node": "3.3.0",
-    "tslint": "^5.7.0",
-    "typescript": "2.5.3"
+    "karma-jasmine": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "^0.0.31",
+    "phantomjs-prebuilt": "^2.1.16",
+    "protractor": "^5.2.1",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "typescript": "^2.5.3"
   },
-  "peerDependencies": {
-    "@angular/core": "4.4.6",
-    "@angular/http": "4.4.6",
-    "zone.js": "0.8.18",
-    "rxjs": "5.5.0"
-  }
+  "peerDependencies": {}
 }
