--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
+    "@angular/animations": "^5.1.1",
+    "@angular/cdk": "^5.0.1",
     "@angular/common": "^5.1.0",
     "@angular/compiler": "^5.1.0",
     "@angular/core": "^5.1.0",
     "@angular/forms": "^5.1.0",
     "@angular/http": "^5.1.0",
+    "@angular/material": "^5.0.1",
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/platform-server": "^5.1.0",
@@ -33,6 +35,7 @@
     "core-js": "^2.5.2",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "hammerjs": "^2.0.8",
     "httpdispatcher": "^2.1.1",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
@@ -45,6 +48,7 @@
     "rxjs": "^5.5.5",
     "systemjs": "^0.20.19",
     "ts-helpers": "^1.1.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
