--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "jwks-rsa": "^1.2.1",
+    "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "mongodb": "^2.2.33",
     "primeng": "^5.0.2",
