--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.19.3",
     "mongodb": "^2.2.33",
     "primeng": "^5.0.2",
+    "raven-js": "^3.21.0",
     "reflect-metadata": "^0.1.10",
     "resolve-url-loader": "^2.2.0",
     "rxjs": "^5.5.5",
