--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "backend": "node backend/server",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test -cc",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
