--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "systemjs": "^0.20.19",
     "ts-helpers": "^1.1.2",
     "web-animations-js": "^2.3.1",
+    "xpress": "file:backend",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
