--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
   - npm install phantomjs
   - npm install -g karma
   - npm install -g coveralls
+  - npm i -g angular-cli-ghpages
   - npm install
   - ng build
 
@@ -19,3 +20,5 @@ script:
 
 after_success:
   - npm run coveralls
+  - ng build --prod --base-href="https://faxad.github.io/cartify/"
+  - sudo ngh
