post upgrade restructure, fixed broken test runner

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,23 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
     "declaration": false,
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
-    "mapRoot": "./",
-    "module": "es6",
-    "moduleResolution": "node",
-    "outDir": "../dist/out-tsc",
-    "sourceMap": true,
     "target": "es5",
+    "mapRoot": "./src/",
+    "baseUrl": "./src/",
+    "types": ["node"],
     "typeRoots": [
-      "../node_modules/@types"
+      "node_modules/@types"
     ],
-    "baseUrl": ".",
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "paths": {
       "auth": ["app/auth"],      
       "core": ["app/core"],
@@ -23,3 +27,4 @@
     }
   }
 }
+
