--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.json",
+            "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/assets",
               "src/favicon.ico"
@@ -68,11 +68,12 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
+            "polyfills": "src/polyfills.ts",
+            "karmaConfig": "src/karma.conf.js",
+            "tsConfig": "src/tsconfig.spec.json",
             "scripts": [
               "node_modules/reflect-metadata/Reflect.js",
               "node_modules/systemjs/dist/system.src.js",
-              "node_modules/rxjs/bundles/Rx.js"
             ],
             "styles": [
               "src/styles.css"
@@ -86,8 +87,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [],
-            "exclude": []
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
