--- a/package.json
+++ b/package.json
@@ -59,20 +59,20 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.6.1",
     "@angular/cli": "^6.0.0",
-    "@types/jasmine": "2.8.7",
+    "@types/jasmine": "2.8.2",
     "@types/jquery": "3.3.1",
     "@types/node": "10.0.5",
     "codelyzer": "4.3.0",
-    "jasmine-core": "3.1.0",
+    "jasmine-core": "^2.8.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "2.0.2",
+    "karma": "^1.7.1",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "1.4.2",
-    "karma-jasmine": "1.1.2",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-jasmine": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-spec-reporter": "0.0.32",
+    "karma-spec-reporter": "^0.0.31",
     "phantomjs-prebuilt": "^2.1.16",
     "protractor": "5.3.1",
     "ts-node": "6.0.3",
