--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "coveralls": "cat ./coverage/coverage.lcov | coveralls",
-    "postinstall": "npm install backend"
+    "preinstall": "npm install backend"
   },
   "private": true,
   "dependencies": {
