--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/reflect-metadata/Reflect.js",
-              "node_modules/systemjs/dist/system.src.js",
+              "node_modules/reflect-metadata/Reflect.js"
             ]
           },
           "configurations": {
@@ -72,8 +71,7 @@
             "karmaConfig": "src/karma.conf.js",
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [
-              "node_modules/reflect-metadata/Reflect.js",
-              "node_modules/systemjs/dist/system.src.js",
+              "node_modules/reflect-metadata/Reflect.js"
             ],
             "styles": [
               "src/styles.css"
